testsuite/tests/grammar/invalid_lexers/pattern_4.lkt
lexer foo_lexer {
    val pat = p"["
    example <- p"{pat}"
}

grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
